WIP: Java 25 overhaul foundations (does not build yet)
Partial overhaul. The branch does not compile yet: MainController,
NetworkScanner and OnvifService still use removed APIs (old NetworkUtils
helpers, SAAJ, Excel fixed-code password settings).

Included:
- pom: Java 25 with preview, JavaFX 27, JavaCV 1.5.14 / FFmpeg 8.1.2,
  OSHI 7.6.1, POI 5.5.1, SLF4J 2.0.20, Logback 1.6.3, JUnit 6.1.3;
  drop HttpClient, Gson and SAAJ; jlink runtime; launch4j with preview
  flags; signing only with a supplied keystore; filtered app version
- IEEE MA-L/MA-M/MA-S OUI data (54,023 prefixes) with brand aliases,
  longest-prefix MacLookupService, scripts/Update-OuiData.ps1
- AppConfig: per-user settings in %APPDATA%, legacy migration, typed
  settings for ports, concurrency, timeouts, compliance and export
- Models: Device/RTSPStream extended and thread-safe, Finding record
- XmlUtils (XXE-safe parsing), TargetParser (IPs, ranges, CIDRs),
  SdpParser (control URLs, H.264/H.265 profile), NetworkUtils rewrite
- Remove unused/stale oui.csv, root ieee-oui.csv, India vendor list

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>